--- a/src/main/resources/templates/gestionusuarios.html
+++ b/src/main/resources/templates/gestionusuarios.html
@@ -27,10 +27,10 @@
       <hr>
       <table class="table table-bordered">
                   <tr>
-                    <th><big>Curso</big></th>
-                    <th><big>Nombre</big></th>
-                    <th><big>Apellidos</big></th>
-                    <th><big>Telefono</big></th>
+                    <th>Curso</th>
+                    <th>Nombre</th>
+                    <th>Apellidos</th>
+                    <th>Telefono</th>
                   </tr>
                   <tr>
 
