--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -1,7 +1,8 @@
+
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
   <head>
-    <meta charset="utf-8"/>
+	<meta charset="utf-8"/>
 
     <title>Backend Ninja - Signin</title>
 
@@ -19,7 +20,7 @@
 	
 	<div class="container">
 	
-		<h1>Hello, user!</h1>
+		<h1>Hello, <span th:text="${username}"></span>!</h1>
 		<br/>
 		<div class="panel panel-default">
 			<div class="panel-heading"></div>
@@ -56,12 +57,18 @@
 
 		<div th:if="${result == 1 }" class="alert alert-success" role="alert">Added Successfully</div>
 		<div th:if="${result == 0 }" class="alert alert-danger" role="alert">Error adding contact</div>
-		<a href="#" th:href="@{/contacts/contactform?id=0}">
-		<button class="btn btn-lg btn-primary btn-block" type="submit"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Add contact</button>
-		</a>
-		<a href="#" th:href="@{/login?logout}">
+
+
+
+			<a href="#" th:href="@{/contacts/contactform?id=0}">
+				<button class="btn btn-lg btn-primary btn-block" type="submit"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Add contact</button>
+			</a>
+
+
+
+		<form th:action="@{/logout}" method="POST">
 		<button class="btn btn-lg btn-primary btn-block" type="submit"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Logout</button>
-		</a>
+		</form>
 	</div>
 
 
